<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ingredientActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredients"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:paddingTop="45dp"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:background="@drawable/textshape"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingredients_label"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="7dp"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/ringshape"
        android:text="@string/ingreient"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ingredients_recycler_view"
        android:layout_below="@+id/ingredients"/>

</RelativeLayout>
</ScrollView>